--- a/ict1508c/ICT1508C_Programming-Assignment_v2420-O_StudentID_Firstname_Lastname.ipynb
+++ b/ict1508c/ICT1508C_Programming-Assignment_v2420-O_StudentID_Firstname_Lastname.ipynb
@@ -812,7 +812,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.210\n",
       "Method:                 Least Squares   F-statistic:                     7.477\n",
       "Date:                Sun, 30 Mar 2025   Prob (F-statistic):           1.81e-09\n",
-      "Time:                        22:03:43   Log-Likelihood:                -4310.3\n",
+      "Time:                        22:09:33   Log-Likelihood:                -4310.3\n",
       "No. Observations:                 220   AIC:                             8641.\n",
       "Df Residuals:                     210   BIC:                             8675.\n",
       "Df Model:                           9                                         \n",
@@ -1325,8 +1325,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">Null Hypothesis: The average gross of `Animation` <= 115000000</span><br/>\n",
-    "<span style=\"color:green\">Alternative Hypothesis: The average gross of `Animation` > 115000000</span>\n",
+    "<span style=\"color:green\">Null Hypothesis: The average gross of `Animation` movies <= 115000000</span><br/>\n",
+    "<span style=\"color:green\">Alternative Hypothesis: The average gross of `Animation` movies > 115000000</span>\n",
     "\n",
     "$$\n",
     "  \\begin{align*}\n",
